fixed event test