@@ -52,6 +52,10 @@ subprojects {
 
         tasks.test {
             useJUnitPlatform()
+            jvmArgs(
+                "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
         }
 
         repositories {
